<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MessingAround</string>
    <string name="loginMsg">Enter user name, password and email to register</string>
    <string name="userNameHint">Your Name</string>
    <string name="passwordHint">Your Password</string>
    <string name="btnRegister">Register</string>
    <string name="action_settings">Settings</string>
    <string name="email">email</string>

</resources>